readynas/arm - add basic web UI integration - add some migration code to get rid of legacy/pre-installed files
git-svn-id: file:///home/awy/mirror/slim/7.7/trunk/platforms@33789 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/addon_template/SQUEEZEBOX.html
+++ b/readynas/addon_template/SQUEEZEBOX.html
@@ -1,11 +1,2 @@
 <!-- User defined content -->
-<table border="0" cellpadding="2" cellspacing="0" width=400>
-  <tr>
-    <td>
-      <span id="PROMPT_SQUEEZEBOX_RUNTIME_SECS" class="field"></span>
-    </td>
-    <td>
-      <input id="SQUEEZEBOX_RUNTIME_SECS" onchange="SQUEEZEBOX_page_change();" onfocus="SQUEEZEBOX_enable_save_button();" type="text">
-    </td>
-  </tr>
-</table>
+<p><a href="" id="sbwebui" target="_blank">Free the Music!</a></p>
