dynamically build link to LMS web UI on ReadyNAS web UI
git-svn-id: file:///home/awy/mirror/slim/7.7/trunk/platforms@33793 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/addon_template/SQUEEZEBOX.html
+++ b/readynas/addon_template/SQUEEZEBOX.html
@@ -1,2 +1,2 @@
 <!-- User defined content -->
-<p><a href="" id="sbwebui" target="_blank">Free the Music!</a></p>
+<p id="sbwebui"><a href="" target="_blank">Free Your Music!</a></p>
