--- a/readynas/addon_template/SQUEEZEBOX.html
+++ b/readynas/addon_template/SQUEEZEBOX.html
@@ -1,2 +1,10 @@
 <!-- User defined content -->
-<p><span id="sbwebui"><a href="" target="_blank">Free Your Music!</a></span> - <span id="LABEL_ACCESS_LMS"></span></p>
+<p><span id="sbwebui"><a href="" target="_blank">Free Your Music!</a></span> - <span id="LABEL_ACCESS_LMS" /></p>
+
+<hr style="height:1px;margin-bottom:10px">
+
+<form name="squeezebox_cleanup">
+	<div><input type="checkbox" name="cleanup_prefs"> <span id="LABEL_CLEANUP_PREFS" /></div>
+	<div style="margin-bottom:5px"><input type="checkbox" name="cleanup_cache"> <span id="LABEL_CLEANUP_CACHE" /></div>
+	<input type="button" id="BUTTON_CLEANUP_DO" onclick="SQUEEZEBOX_cleanup()" />
+</form>
