--- a/readynas/addon_template/SQUEEZEBOX.html
+++ b/readynas/addon_template/SQUEEZEBOX.html
@@ -6,5 +6,6 @@
 <form name="squeezebox_cleanup">
 	<div><input type="checkbox" name="cleanup_prefs"> <span id="LABEL_CLEANUP_PREFS" /></div>
 	<div style="margin-bottom:5px"><input type="checkbox" name="cleanup_cache"> <span id="LABEL_CLEANUP_CACHE" /></div>
-	<input type="button" id="BUTTON_CLEANUP_DO" onclick="SQUEEZEBOX_cleanup()" />
+	<input type="button" name="cleanup_do" id="BUTTON_CLEANUP_DO" onclick="SQUEEZEBOX_cleanup()" />
+	<span id="LABEL_CLEANUP_PLEASE_STOP_SC" style="font-style:italic" />
 </form>
